css/styles.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
  font-size: large;
}

.red {
  color: red;
}

.layout {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 0.25rem 1rem 0.25rem 1rem;
  margin: auto;
  width: min(64rem, 100%);
  min-height: 100vh;
  box-sizing: border-box;
}

.content {
  padding: 1rem 0.25rem 1rem 0.25rem;
}

.navbar {
  display: flex;
  justify-content: end;
}

.navbar-items {
  display: flex;
  gap: 1rem;
  font-size: large;
  font-weight: bold;
}

.navbar-items > a {
  text-decoration: none;
}

.navbar-items > a:visited {
  text-decoration: none;
  color: inherit;
}

.title {
  font-size: xxx-large;
  font-weight: bold;
  margin-bottom: 2rem;
}

.blurb {
  font-size: x-large;
  width: min(100%, 32rem);
  margin-bottom: 2rem;
}

.skills {
  margin-top: 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
}

.skill {
  display: flex;
  min-height: 12rem;
  flex-wrap: wrap;
  justify-content: center;
  width: 100%;
}

.skill-title {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: xx-large;
  font-weight: bold;
  padding: 0.5rem;
  width: min(24rem, 100%);
}

.skill-blurb {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0.5rem;
  width: min(24rem, 100%);
}

.skill:nth-child(odd) {
  background: lightgrey;
}

@media (min-width: 481px) {
  .blog>p>img{
    display: block;
    max-width: 50%;
    margin: auto;
  }  
}

.blog-index-item {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  margin-bottom: 2rem;
}

.blog-index-title {
  font-size: x-large;
  font-weight: bold;
}

.blog-index-title > a {
  text-decoration: none;
  color: inherit;
}

.blog-index-title > a:visited {
  color: inherit;
}

.footer {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  margin-top: 2rem;
}

.copyright {
  font-size: smaller;
}

@media (max-width: 480px) {
  .portfolio-index {
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr;
  }
}

@media (max-width: 1279px) {
  .portfolio-index {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(2, 1fr);
  }
}

@media (min-width: 1280px) {
  .portfolio-index {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(3, 1fr);
  }
}

.portfolio-item {
  width: 100%;
}

.portfolio-item > figure {
  margin: 0;
  padding: 0;
}

.portfolio-item > figure > figcaption {
  color: white;
  background-color: black;
  width: 100%;
  padding: 0.5rem;
  box-sizing: border-box;
}

.portfolio-item > figure > figcaption > a {
  color: inherit;
  text-decoration: none;
}

.portfolio-item > figure > figcaption > a:visited {
  color: inherit;
  text-decoration: none;
}

.portfolio-item > figure > img {
  width: 100%;
  height: auto;
}

